--- a/.gitignore
+++ b/.gitignore
@@ -2,27 +2,17 @@
 *.apk
 .gradle
 local.properties
-.idea/workspace.xml
-.idea/libraries
-.idea/caches
-.idea/codeStyles
-.idea/assetWizardSettings.xml
-.idea/gradle.xml
-.idea/misc.xml
-.idea/markdown-navigator/
-.idea/markdown-navigator.xml
-.idea/markdown-exported-files.xml
-.idea/modules.xml
-.idea/encodings.xml
-.idea/dbnavigator.xml
+.idea/
 .DS_Store
 *.orig
 build
 app/build
+app/release*
 debug
 release/
+beta/
 captures
 .externalNativeBuild
 
 keystore.properties
-local.properties
+
